samples/_failures_safe/1761464715_fa3694_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3827d09.c: In function ‘main’:
./samples/SAFE/__tmp_f3827d09.c:154:55: error: expected ‘)’ at end of input
  154 |                 int status = add_matrices(&mat1, &mat2
      |                                          ~            ^
      |                                                       )
./samples/SAFE/__tmp_f3827d09.c:154:30: error: too few arguments to function ‘add_matrices’
  154 |                 int status = add_matrices(&mat1, &mat2
      |                              ^~~~~~~~~~~~
./samples/SAFE/__tmp_f3827d09.c:95:5: note: declared here
   95 | int add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_f3827d09.c:154:17: error: expected declaration or statement at end of input
  154 |                 int status = add_matrices(&mat1, &mat2
      |                 ^~~
./samples/SAFE/__tmp_f3827d09.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f3827d09.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f3827d09.c:154:17: error: expected declaration or statement at end of input
